현재 위치를 중심으로 검색하기 (카테고리는 적용 전)

--- a/src/main/resources/templates/page1.html
+++ b/src/main/resources/templates/page1.html
@@ -41,7 +41,7 @@
     </div>
 
     <button th:onclick="|window.location.href='@{/page2}'|" class="btn">
-        메뉴 선택하러가기
+        오점머 시작하기!
     </button>
 </div>
 
