--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -74,7 +74,7 @@
             $.ajax({
                 method: "GET",
                 url: url,
-                headers: { 'Authorization': 'KakaoAK YOUR_REST_API_KEY' },
+                headers: { 'Authorization': 'Kakao_API_KEY' },
                 async: false, // 동기 방식으로 변경
                 success: function(data) {
                     // 검색된 식당 정보를 restaurants 배열에 추가
