프론트 구현 중

--- a/src/main/resources/templates/map/map3.html
+++ b/src/main/resources/templates/map/map3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>키워드로 장소검색하고 목록으로 표출하기  _인여님 조 코드</title>
+    <title>키워드로 장소검색하고 목록으로 표출하기  _인영님 조 코드</title>
     <style>
         .map_wrap, .map_wrap * {
             margin: 0;
