--- a/src/main/resources/templates/page3.html
+++ b/src/main/resources/templates/page3.html
@@ -66,7 +66,7 @@
     </div>
     <br>
 
-    <button th:onclick="|window.location.href='@{/page4}'|" class="btn">
+    <button th:onclick="|window.location.href='@{/result3}'|" class="btn">
         식당 추천 받으러 가기
     </button>
 
