--- a/src/main/resources/templates/page4.html
+++ b/src/main/resources/templates/page4.html
@@ -1,383 +1,129 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>오점머</title>
-    <style>
-        .map_wrap, .map_wrap * {margin:0;padding:0;font-family:'Malgun Gothic',dotum,'돋움',sans-serif;font-size:12px;}
-        .map_wrap a, .map_wrap a:hover, .map_wrap a:active{color:#000;text-decoration: none;}
-        .map_wrap {position:relative;width:100%;height:500px;}
-        #menu_wrap {position:absolute;top:0;left:0;bottom:0;width:250px;margin:10px 0 30px 10px;padding:5px;overflow-y:auto;background:rgba(255, 255, 255, 0.7);z-index: 1;font-size:12px;border-radius: 10px;}
-        .bg_white {background:#fff;}
-        #menu_wrap hr {display: block; height: 1px;border: 0; border-top: 2px solid #5F5F5F;margin:3px 0;}
-        #menu_wrap .option{text-align: center;}
-        #menu_wrap .option p {margin:10px 0;}
-        #menu_wrap .option button {margin-left:5px;}
-        #placesList li {list-style: none;}
-        #placesList .item {position:relative;border-bottom:1px solid #888;overflow: hidden;cursor: pointer;min-height: 65px;}
-        #placesList .item span {display: block;margin-top:4px;}
-        #placesList .item h5, #placesList .item .info {text-overflow: ellipsis;overflow: hidden;white-space: nowrap;}
-        #placesList .item .info{padding:10px 0 10px 55px;}
-        #placesList .info .gray {color:#8a8a8a;}
-        #placesList .info .jibun {padding-left:26px;background:url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/places_jibun.png) no-repeat;}
-        #placesList .info .tel {color:#009900;}
-        #placesList .item .markerbg {float:left;position:absolute;width:36px; height:37px;margin:10px 0 0 10px;background:url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/marker_number_blue.png) no-repeat;}
-        #placesList .item .marker_1 {background-position: 0 -10px;}
-        #placesList .item .marker_2 {background-position: 0 -56px;}
-        #placesList .item .marker_3 {background-position: 0 -102px}
-        #placesList .item .marker_4 {background-position: 0 -148px;}
-        #placesList .item .marker_5 {background-position: 0 -194px;}
-        #placesList .item .marker_6 {background-position: 0 -240px;}
-        #placesList .item .marker_7 {background-position: 0 -286px;}
-        #placesList .item .marker_8 {background-position: 0 -332px;}
-        #placesList .item .marker_9 {background-position: 0 -378px;}
-        #placesList .item .marker_10 {background-position: 0 -423px;}
-        #placesList .item .marker_11 {background-position: 0 -470px;}
-        #placesList .item .marker_12 {background-position: 0 -516px;}
-        #placesList .item .marker_13 {background-position: 0 -562px;}
-        #placesList .item .marker_14 {background-position: 0 -608px;}
-        #placesList .item .marker_15 {background-position: 0 -654px;}
-        #pagination {margin:10px auto;text-align: center;}
-        #pagination a {display:inline-block;margin-right:10px;}
-        #pagination .on {font-weight: bold; cursor: default;color:#777;}
-    </style>
+  <link th:href="@{/css/bootstrap.min.css}" href="../css/bootstrap.min.css" rel="stylesheet">
+  <script th:src="@{/js/script.js}"></script>
+  <link th:href="@{/css/styles.css}" rel="stylesheet"> <!-- CSS 파일 참조 추가 -->
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <meta charset="utf-8">
+  <title>오점머</title>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
+  <style>
+    .btn {
+      display: block;
+      margin: 20px auto; /* 가운데 정렬 */
+      font-size: 1.0em;
+      padding: 8px 16px;
+      border-radius: 8px;
+      background-color: #007BFF;
+      color: #FFFFFF;
+      text-align: center;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+    .center-text {
+      text-align: center;
+    }
+
+    .restaurant-info {
+      border: 1px solid #ddd;
+      margin: 20px 0;
+      padding: 10px;
+      border-radius: 5px;
+    }
+  </style>
 </head>
 <body>
 <h1>
-    <div style="text-align:center">오늘의 점심 메뉴</div>
+  <div style="text-align:center">오늘의 점심 메뉴</div>
 </h1>
 <h3>
-    <div style="text-align:center">오늘 뭐 먹지?</div>
+  <div style="text-align:center">오늘 뭐 먹지?</div>
 </h3>
+
+<div>
 <hr class="my-4">
-<p id="location"></p> <!-- 위치 정보를 표시할 요소 -->
-<p id="category"></p> <!-- 카테고리 정보를 표시할 요소 -->
-<ol class="list-group list-group-numbered" id="restaurantList">
+  <p id="location" class="center-text"></p> <!-- 위치 정보를 표시할 요소 -->
+  <p id="category" class="center-text"></p> <!-- 카테고리 정보를 표시할 요소 -->
+  <ol class="list-group list-group-numbered center-text" id="restaurantList">
     <!-- 여기에 음식점 목록 표시 -->
-</ol>
-<div class="alert alert-warning" role="alert" style="display:none">
-    근처에 해당되는 음식점이 존재하지 않습니다.<br>
-    카데고리를 재선택하거나, 다른 곳으로 이동해주세요.
+
+  </ol>
 </div>
 
-
-<div class="map_wrap">
-    <div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
-
-    <div id="menu_wrap" class="bg_white">
-        <div class="option">
-            <div>
-                <form onsubmit="searchPlaces(); return false;">
-                    키워드 : <input type="text" value="맛집" id="keyword" size="15">
-                    <button type="submit">검색하기</button>
-                </form>
-            </div>
-        </div>
-        <hr>
-        <ul id="placesList"></ul>
-        <div id="pagination"></div>
-    </div>
+<div class="alert alert-warning center-text" role="alert" style="display:none">
+  근처에 해당되는 음식점이 존재하지 않습니다.<br>
+  카데고리를 재선택하거나, 다른 곳으로 이동해주세요.
 </div>
+
 <div style="text-align:center">
-    <button id="reloadButton" type="button" class="btn btn-primary btn-lg">다시 추천 받기!</button>
-    <button id="selectCategoryButton" type="button" class="btn btn-secondary btn-lg">카테고리 다시 선택하기</button>
+  <button id="reloadButton" type="button" class="btn btn-primary btn-lg">다시 추천 받기!</button>
+  <button id="selectCategoryButton" type="button" class="btn btn-secondary btn-lg">카테고리 다시 선택하기
+  </button>
 </div>
-
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=cf620856f46d903f5b7f04166e0f9ea3&libraries=services"></script>
 
 <script>
+  $(document).ready(function () {
+    $('#reloadButton').on('click', function () {
+      recommend(); // 추천 받기 실행
+    });
+    $('#selectCategoryButton').on('click', function () {
+      window.location.href = '/page3'; // 카테고리 선택 페이지로 이동
+    });
+
+    // 페이지 로딩 시 추천 받기 실행
+    recommend();
+
+    // 세션 스토리지에서 데이터를 가져옵니다.
     var latitude = sessionStorage.getItem('latitude');
     var longitude = sessionStorage.getItem('longitude');
+    var categoryString = sessionStorage.getItem('category');
+    var category = JSON.parse(categoryString);
 
-    var mapContainer = document.getElementById('map'), // 지도를 표시할 div
-        mapOption = {
-            center: new kakao.maps.LatLng(latitude, longitude), // 지도의 중심좌표
-            level: 3 // 지도의 확대 레벨
-        };
+    // 확인용
+    $('#location').text('위도: ' + latitude + ', 경도: ' + longitude);
+    $('#category').text('선택한 카테고리: ' + category.join(', ')); // 배열의 요소들을 쉼표로 구분하여 문자열로 변환합니다.
 
-    // 지도를 생성합니다
-    var map = new kakao.maps.Map(mapContainer, mapOption);
-
-    // 장소 검색 객체를 생성합니다
-    var ps = new kakao.maps.services.Places();
-
-    // 검색 결과 목록이나 마커를 클릭했을 때 장소명을 표출할 인포윈도우를 생성합니다
-    var infowindow = new kakao.maps.InfoWindow({zIndex:1});
-
-    // 키워드로 장소를 검색합니다
-    searchPlaces();
-
-    // 키워드 검색을 요청하는 함수입니다
-    function searchPlaces() {
-
-        var keyword = document.getElementById('keyword').value;
-
-        if (!keyword.replace(/^\s+|\s+$/g, '')) {
-            alert('키워드를 입력해주세요!');
-            return false;
-        }
-
-        // 장소검색 객체를 통해 키워드로 장소검색을 요청합니다
-        ps.keywordSearch(keyword, placesSearchCB, {
-            radius: 1000      // 반경 100m로 설정하여 검색합니다.
-        });
-    }
-
-    // 장소검색이 완료됐을 때 호출되는 콜백함수 입니다
-    function placesSearchCB(data, status, pagination) {
-        if (status === kakao.maps.services.Status.OK) {
-
-            // 정상적으로 검색이 완료됐으면
-            // 검색 목록과 마커를 표출합니다
-            displayPlaces(data);
-
-            // 페이지 번호를 표출합니다
-            displayPagination(pagination);
-
-        } else if (status === kakao.maps.services.Status.ZERO_RESULT) {
-
-            alert('검색 결과가 존재하지 않습니다.');
-            return;
-
-        } else if (status === kakao.maps.services.Status.ERROR) {
-
-            alert('검색 결과 중 오류가 발생했습니다.');
-            return;
-
-        }
-    }
-
-    // 검색 결과 목록과 마커를 표출하는 함수입니다
-    function displayPlaces(places) {
-
-        var listEl = document.getElementById('placesList'),
-            menuEl = document.getElementById('menu_wrap'),
-            fragment = document.createDocumentFragment(),
-            bounds = new kakao.maps.LatLngBounds(),
-            listStr = '';
-
-        // 검색 결과 목록에 추가된 항목들을 제거합니다
-        removeAllChildNods(listEl);
-
-        // 지도에 표시되고 있는 마커를 제거합니다
-        removeMarker();
-
-        for ( var i=0; i<places.length; i++ ) {
-
-            // 마커를 생성하고 지도에 표시합니다
-            var placePosition = new kakao.maps.LatLng(places[i].y, places[i].x),
-                marker = addMarker(placePosition, i),
-                itemEl = getListItem(i, places[i]); // 검색 결과 항목 Element를 생성합니다
-
-            // 검색된 장소 위치를 기준으로 지도 범위를 재설정하기위해
-            // LatLngBounds 객체에 좌표를 추가합니다
-            bounds.extend(placePosition);
-
-            // 마커와 검색결과 항목에 mouseover 했을때
-            // 해당 장소에 인포윈도우에 장소명을 표시합니다
-            // mouseout 했을 때는 인포윈도우를 닫습니다
-            (function(marker, title) {
-                kakao.maps.event.addListener(marker, 'mouseover', function() {
-                    displayInfowindow(marker, title);
-                });
-
-                kakao.maps.event.addListener(marker, 'mouseout', function() {
-                    infowindow.close();
-                });
-
-                itemEl.onmouseover =  function () {
-                    displayInfowindow(marker, title);
-                };
-
-                itemEl.onmouseout =  function () {
-                    infowindow.close();
-                };
-            })(marker, places[i].place_name);
-
-            fragment.appendChild(itemEl);
-        }
-
-        // 검색결과 항목들을 검색결과 목록 Element에 추가합니다
-        listEl.appendChild(fragment);
-        menuEl.scrollTop = 0;
-
-        // 검색된 장소 위치를 기준으로 지도 범위를 재설정합니다
-        map.setBounds(bounds);
-    }
-
-    // 검색결과 항목을 Element로 반환하는 함수입니다
-    function getListItem(index, places) {
-
-        var el = document.createElement('li'),
-            itemStr = '<span class="markerbg marker_' + (index+1) + '"></span>' +
-                '<div class="info">' +
-                '   <h5>' + places.place_name + '</h5>';
-
-        if (places.road_address_name) {
-            itemStr += '    <span>' + places.road_address_name + '</span>' +
-                '   <span class="jibun gray">' +  places.address_name  + '</span>';
-        } else {
-            itemStr += '    <span>' +  places.address_name  + '</span>';
-        }
-
-        itemStr += '  <span class="tel">' + places.phone  + '</span>' +
-            '</div>';
-
-        el.innerHTML = itemStr;
-        el.className = 'item';
-
-        return el;
-    }
-
-    // 마커를 생성하고 지도 위에 마커를 표시하는 함수입니다
-    function addMarker(position, idx, title) {
-        var imageSrc = 'https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/marker_number_blue.png', // 마커 이미지 url, 스프라이트 이미지를 씁니다
-            imageSize = new kakao.maps.Size(36, 37),  // 마커 이미지의 크기
-            imgOptions =  {
-                spriteSize : new kakao.maps.Size(36, 691), // 스프라이트 이미지의 크기
-                spriteOrigin : new kakao.maps.Point(0, (idx*46)+10), // 스프라이트 이미지 중 사용할 영역의 좌상단 좌표
-                offset: new kakao.maps.Point(13, 37) // 마커 좌표에 일치시킬 이미지 내에서의 좌표
-            },
-            markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize, imgOptions),
-            marker = new kakao.maps.Marker({
-                position: position, // 마커의 위치
-                image: markerImage
-            });
-
-        marker.setMap(map); // 지도 위에 마커를 표출합니다
-        markers.push(marker);  // 배열에 생성된 마커를 추가합니다
-
-        return marker;
-    }
-
-    // 지도 위에 표시되고 있는 마커를 모두 제거합니다
-    function removeMarker() {
-        for ( var i = 0; i < markers.length; i++ ) {
-            markers[i].setMap(null);
-        }
-        markers = [];
-    }
-
-    // 검색결과 목록 하단에 페이지번호를 표시는 함수입니다
-    function displayPagination(pagination) {
-        var paginationEl = document.getElementById('pagination'),
-            fragment = document.createDocumentFragment(),
-            i;
-
-        // 기존에 추가된 페이지번호를 삭제합니다
-        while (paginationEl.hasChildNodes()) {
-            paginationEl.removeChild (paginationEl.lastChild);
-        }
-
-        for (i=1; i<=pagination.last; i++) {
-            var el = document.createElement('a');
-            el.href = "#";
-            el.innerHTML = i;
-
-            if (i===pagination.current) {
-                el.className = 'on';
-            } else {
-                el.onclick = (function(i) {
-                    return function() {
-                        pagination.gotoPage(i);
-                    }
-                })(i);
-            }
-
-            fragment.appendChild(el);
-        }
-        paginationEl.appendChild(fragment);
-    }
-
-    // 검색결과 목록 또는 마커를 클릭했을 때 호출되는 함수입니다
-    // 인포윈도우에 장소명을 표시합니다
-    function displayInfowindow(marker, title) {
-        var content = '<div style="padding:5px;z-index:1;">' + title + '</div>';
-
-        infowindow.setContent(content);
-        infowindow.open(map, marker);
-    }
-
-    // 검색결과 목록의 자식 Element를 제거하는 함수입니다
-    function removeAllChildNods(el) {
-        while (el.hasChildNodes()) {
-            el.removeChild (el.lastChild);
-        }
-    }
-
-    $(document).ready(function() {
-        $('#reloadButton').on('click', function() {
-            recommend(); // 추천 받기 실행
-        });
-        $('#selectCategoryButton').on('click', function() {
-            window.location.href = '/page3'; // 카테고리 선택 페이지로 이동
-        });
-
-        // 페이지 로딩 시 추천 받기 실행
-        recommend();
-
-
-        // 세션 스토리지에서 데이터를 가져옵니다.
-        var latitude = sessionStorage.getItem('latitude');
-        var longitude = sessionStorage.getItem('longitude');
-        var categoryString = sessionStorage.getItem('category');
-        var category = JSON.parse(categoryString);
-
-        // 확인용
-        $('#location').text('위도: ' + latitude + ', 경도: ' + longitude);
-        // $('#category').text('선택한 카테고리: ' + category.join(', ')); // 배열의 요소들을 쉼표로 구분하여 문자열로 변환합니다.
-
-        // 백엔드로 현위치와 카테고리 정보를 전송
-        $.ajax({
-            method: "POST",
-            url: "/v1/ojm/restaurant",
-            data: {latitude: latitude, longitude: longitude, category: category.join()},
-            success: function (data) {
-                displayRestaurants(data);
-            },
-            error: function (xhr, status, error) {
-                console.error("Error occurred: " + error);
-            }
-        });
-
-        function displayRestaurants(restaurants) {
-            var list = $('#restaurantList');
-            list.empty(); // 기존 목록을 비움
-            restaurants.forEach(function (restaurant) {
-                list.append('<li class="list-group-item">' + restaurant.restaurantName + '</li>');
-            });
-        }
+    // 백엔드로 현위치와 카테고리 정보를 전송
+    $.ajax({
+      method: "POST",
+      url: "/v1/ojm/nearbyRestaurant",
+      contentType: "application/json",
+      data: JSON.stringify({
+        // currentLat: latitude,
+        currentLat: 37.5740321,
+        // currentLon: longitude,
+        currentLon: 127.0078127,
+        selectedCategories: category
+      }),
+      success: function (data) {
+        displayRestaurants(data);
+      },
+      error: function (xhr, status, error) {
+        console.error("Error occurred: " + error);
+      }
     });
 
-    $(document).ready(function() {
-        var categoryString = sessionStorage.getItem('category');
-        var category = JSON.parse(categoryString);
-
-        // 카테고리에 따라 키워드 설정
-        var keyword;
-        if (category.includes("한식")) {
-            keyword = "한식";
-        } else if (category.includes("일식")) {
-            keyword = "일식";
-        } else if (category.includes("중식")) {
-            keyword = "중식";
-        } else if (category.includes("양식")) {
-            keyword = "양식";
-        } else {
-            keyword = "맛집";
-        }
-        // 키워드 입력 요소에 설정
-        $('#keyword').val(keyword);
-
-        // 키워드 검색을 요청하는 함수를 호출합니다.
-        searchPlaces();
-    });
-
-
-
+    function displayRestaurants(data) {
+      var restaurants = data.data; // 응답 데이터의 구조에 따라 수정 필요
+      var list = $('#restaurantList');
+      list.empty(); // 기존 목록을 비움
+      if (restaurants.length === 0) {
+        $('.alert-warning').show(); // 음식점이 없는 경우 경고 표시
+      } else {
+        $('.alert-warning').hide(); // 음식점이 있는 경우 경고 숨김
+        restaurants.slice(0, 10).forEach(function (restaurant) { // 최대 10개만 표시
+          list.append('<li class="list-group-item">' +
+              '<h4>식당 이름: ' + restaurant.name + '</h4>' +
+              '<p>카테고리: ' + restaurant.category + '</p>' +
+              '<p>주소: ' + restaurant.address + '</p>' +
+              '<p>전화번호: ' + restaurant.number + '</p>' +
+              '</li>');
+        });
+      }
+    }
+  });
 </script>
 </body>
 </html>
