--- a/src/main/resources/templates/page2.html
+++ b/src/main/resources/templates/page2.html
@@ -1,104 +1,113 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8">
-    <link th:href="@{/css/bootstrap.min.css}" href="../css/bootstrap.min.css" rel="stylesheet">
-    <link th:href="@{/css/styles.css}" rel="stylesheet"> <!-- CSS 파일 참조 추가 -->
-    <script th:src="@{/js/script.js}"></script>
-    <style>
-        .containers {
-            max-width: 560px;
-            text-align: center;
-            margin-top: 90px;
-        }
+  <meta charset="utf-8">
+  <link th:href="@{/css/bootstrap.min.css}" href="../css/bootstrap.min.css" rel="stylesheet">
+  <link th:href="@{/css/styles.css}" rel="stylesheet"> <!-- CSS 파일 참조 추가 -->
+  <script th:src="@{/js/script.js}"></script>
+  <style>
+    .containers {
+      max-width: 560px;
+      text-align: center;
+      margin-top: 90px;
+    }
 
-        /* 각 요소를 블록 요소로 설정하여 줄바꿈을 적용합니다. */
-        h4, .btn {
-            display: block;
-            margin-bottom: 20px; /* 간격 조절 */
-        }
-        .btn {
-            display: block;
-            margin: 20px auto; /* 가운데 정렬 */
-            font-size: 1.0em;
-            padding: 8px 16px;
-            border-radius: 8px;
-            background-color: #007BFF;
-            color: #FFFFFF;
-            text-align: center;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
+    /* 각 요소를 블록 요소로 설정하여 줄바꿈을 적용합니다. */
+    h4, .btn {
+      display: block;
+      margin-bottom: 20px; /* 간격 조절 */
+    }
 
-        #map {
-            width: 60% !important;
-            height: 525px !important;
-            margin: 0 auto /* 가운데 정렬 */
-        }
+    .btn {
+      display: block;
+      margin: 20px auto; /* 가운데 정렬 */
+      font-size: 1.0em;
+      padding: 8px 16px;
+      border-radius: 8px;
+      background-color: #007BFF;
+      color: #FFFFFF;
+      text-align: center;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
 
-    </style>
+    #map {
+      width: 60% !important;
+      height: 525px !important;
+      margin: 0 auto /* 가운데 정렬 */
+    }
+
+  </style>
 </head>
 <body>
 <div th:fragment="block">
-    <div class="containers">
-        <h2 th:text="${selectedCategory}"></h2>
+  <div class="containers">
+    <h2 th:text="${selectedCategory}"></h2>
 
-    </div> <!-- /container -->
-    <div class="row">
-        <div class="col">
-            <button class="w-100 btn btn-primary btn-lg" type="submit" onclick="showRecommend()">
-                위치 확인하기
-            </button>
-            <p id="location"></p> <!-- 위치 정보를 표시할 요소 추가 -->
-        </div>
+  </div> <!-- /container -->
+  <div class="row">
+      <div style="text-align:center">
+          아래에 위치확인하기버튼을 누르고, <br>
+          우측 상단에 위치 액세스를 허용해주세요! <br>
+          아래에 지도가 보여질 예정입니다. 잠시만 기다려주세요!
+      </div>
+
+    <div class="col">
+      <button class="w-100 btn btn-primary btn-lg" type="submit" onclick="showRecommend()">
+        위치 확인하기
+      </button>
+
+      <p id="location"></p> <!-- 위치 정보를 표시할 요소 추가 -->
     </div>
+  </div>
 
-    <div id="map" style="width:100%;height:350px;"></div>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=cf620856f46d903f5b7f04166e0f9ea3"></script>
+  <div id="map" style="width:100%;height:350px;"></div>
+  <script type="text/javascript"
+          src="//dapi.kakao.com/v2/maps/sdk.js?appkey=cf620856f46d903f5b7f04166e0f9ea3"></script>
 
 </div>
 
 <button th:onclick="|window.location.href='@{/page3}'|" class="btn">
-    현위치를 중심으로 메뉴 선택하러 가기
+  현위치를 중심으로 메뉴 선택하러 가기
 </button>
 
 
 <script>
-    function showRecommend() {
-        if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition(function(position) {
-                var latitude = position.coords.latitude;
-                var longitude = position.coords.longitude;
+  function showRecommend() {
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(function (position) {
+        var latitude = position.coords.latitude;
+        var longitude = position.coords.longitude;
 
-                // 위치 정보를 세션 스토리지에 저장합니다.
-                sessionStorage.setItem('latitude', latitude);
-                sessionStorage.setItem('longitude', longitude);
+        // 위치 정보를 세션 스토리지에 저장합니다.
+        sessionStorage.setItem('latitude', latitude);
+        sessionStorage.setItem('longitude', longitude);
 
-                document.getElementById("location").innerHTML = "위도: " + latitude + "<br>경도: " + longitude;
+        document.getElementById("location").innerHTML = "위도: " + latitude + "<br>경도: " + longitude;
 
-                var mapContainer = document.getElementById('map');
-                var mapOption = {
-                    center: new kakao.maps.LatLng(latitude, longitude), // 현재 위치를 중심으로 지도 표시
-                    level: 3
-                };
+        var mapContainer = document.getElementById('map');
+        var mapOption = {
+          center: new kakao.maps.LatLng(latitude, longitude), // 현재 위치를 중심으로 지도 표시
+          level: 3
+        };
 
-                var map = new kakao.maps.Map(mapContainer, mapOption); // 지도 생성
+        var map = new kakao.maps.Map(mapContainer, mapOption); // 지도 생성
 
-                // 마커가 표시될 위치입니다
-                var markerPosition = new kakao.maps.LatLng(latitude, longitude);
+        // 마커가 표시될 위치입니다
+        var markerPosition = new kakao.maps.LatLng(latitude, longitude);
 
-                // 마커를 생성합니다
-                var marker = new kakao.maps.Marker({
-                    position: markerPosition
-                });
+        // 마커를 생성합니다
+        var marker = new kakao.maps.Marker({
+          position: markerPosition
+        });
 
-                // 마커가 지도 위에 표시되도록 설정합니다
-                marker.setMap(map);
-            });
-        } else {
-            alert("이 브라우저는 Geolocation을 지원하지 않습니다.");
-        }
+        // 마커가 지도 위에 표시되도록 설정합니다
+        marker.setMap(map);
+      });
+    } else {
+      alert("이 브라우저는 Geolocation을 지원하지 않습니다.");
     }
+  }
 
 </script>
 </body>
