api 요청 응답 결과 프론트로 보여주기

--- a/src/main/resources/templates/page4.html
+++ b/src/main/resources/templates/page4.html
@@ -98,10 +98,10 @@
       url: "/v1/ojm/nearbyRestaurant",
       contentType: "application/json",
       data: JSON.stringify({
-        // currentLat: latitude,
-        currentLat: 37.5740321,
-        // currentLon: longitude,
-        currentLon: 127.0078127,
+        currentLat: latitude,
+        // currentLat: 37.5740321,
+        currentLon: longitude,
+        // currentLon: 127.0078127,
         selectedCategories: category
       }),
       success: function (data) {
