--- a/src/main/resources/templates/page4.html
+++ b/src/main/resources/templates/page4.html
@@ -71,16 +71,18 @@
 </div>
 
 <script>
-  $(document).ready(function () {
-    $('#reloadButton').on('click', function () {
-      recommend(); // 추천 받기 실행
+  $(document).ready(function() {
+    // 페이지 로딩 시 recommend() 함수 자동 실행
+    recommend();
+
+    // "다시 추천 받기!" 버튼에 대한 이벤트 리스너 설정
+    $('#reloadButton').on('click', function() {
+      recommend();
     });
     $('#selectCategoryButton').on('click', function () {
       window.location.href = '/page3'; // 카테고리 선택 페이지로 이동
     });
-
-    // 페이지 로딩 시 추천 받기 실행
-    recommend();
+  });
 
     // 세션 스토리지에서 데이터를 가져옵니다.
     var latitude = sessionStorage.getItem('latitude');
@@ -92,25 +94,27 @@
     $('#location').text('위도: ' + latitude + ', 경도: ' + longitude);
     $('#category').text('선택하신 카테고리: ' + category.join(', ')); // 배열의 요소들을 쉼표로 구분하여 문자열로 변환합니다.
 
-    // 백엔드로 현위치와 카테고리 정보를 전송
-    $.ajax({
-      method: "POST",
-      url: "/v1/ojm/nearbyRestaurant",
-      contentType: "application/json",
-      data: JSON.stringify({
-        currentLat: latitude,
-        // currentLat: 37.5740321,
-        currentLon: longitude,
-        // currentLon: 127.0078127,
-        selectedCategories: category
-      }),
-      success: function (data) {
-        displayRestaurants(data);
-      },
-      error: function (xhr, status, error) {
-        console.error("Error occurred: " + error);
-      }
-    });
+    function recommend() {
+      // 백엔드로 현위치와 카테고리 정보를 전송
+      $.ajax({
+        method: "POST",
+        url: "/v1/ojm/nearbyRestaurant",
+        contentType: "application/json",
+        data: JSON.stringify({
+          // currentLat: latitude,
+          currentLat: 37.5740321,
+          // currentLon: longitude,
+          currentLon: 127.0078127,
+          selectedCategories: category
+        }),
+        success: function (data) {
+          displayRestaurants(data);
+        },
+        error: function (xhr, status, error) {
+          console.error("Error occurred: " + error);
+        }
+      });
+    }
 
     function displayRestaurants(data) {
       var restaurants = data.data; // 응답 데이터의 구조에 따라 수정 필요
@@ -130,7 +134,6 @@
         });
       }
     }
-  });
 </script>
 </body>
 </html>
