테스트를 위해 설정한 위도 경도 수정

--- a/src/main/resources/templates/page2.html
+++ b/src/main/resources/templates/page2.html
@@ -83,7 +83,7 @@
         sessionStorage.setItem('latitude', latitude);
         sessionStorage.setItem('longitude', longitude);
 
-        document.getElementById("location").innerHTML = "위도: " + latitude + "<br>경도: " + longitude;
+        // document.getElementById("location").innerHTML = "위도: " + latitude + "<br>경도: " + longitude;
 
         var mapContainer = document.getElementById('map');
         var mapOption = {
