--- a/src/main/resources/templates/page4.html
+++ b/src/main/resources/templates/page4.html
@@ -101,10 +101,8 @@
         url: "/v1/ojm/nearbyRestaurant",
         contentType: "application/json",
         data: JSON.stringify({
-          // currentLat: latitude,
-          currentLat: 37.5740321,
-          // currentLon: longitude,
-          currentLon: 127.0078127,
+          currentLat: latitude,
+          currentLon: longitude,
           selectedCategories: category
         }),
         success: function (data) {
