프론트 부분 수정

--- a/src/main/resources/templates/page2.html
+++ b/src/main/resources/templates/page2.html
@@ -31,6 +31,11 @@
       transition: background-color 0.3s;
     }
 
+    .medium-text {
+      font-size: 18px;
+      line-height: 2; /* 줄 간격 조정 */
+    }
+
     #map {
       width: 60% !important;
       height: 525px !important;
@@ -46,9 +51,9 @@
 
   </div> <!-- /container -->
   <div class="row">
-      <div style="text-align:center">
-          아래에 위치확인하기버튼을 누르고, <br>
-          우측 상단에 위치 액세스를 허용해주세요! <br>
+      <div style="text-align:center" class = "medium-text">
+          1. 위치확인하기버튼 클릭! <br>
+          2. 상단에 위치 액세스 허용! <br>
           아래에 지도가 보여질 예정입니다. 잠시만 기다려주세요!
       </div>
 
