--- a/src/main/resources/templates/page2.html
+++ b/src/main/resources/templates/page2.html
@@ -88,7 +88,7 @@
         sessionStorage.setItem('latitude', latitude);
         sessionStorage.setItem('longitude', longitude);
 
-        document.getElementById("location").innerHTML = "위도: " + latitude + "<br>경도: " + longitude;
+        // document.getElementById("location").innerHTML = "위도: " + latitude + "<br>경도: " + longitude;
 
         var mapContainer = document.getElementById('map');
         var mapOption = {
