제공되지 않는 페이지 요청 시 홈으로 리다이렉트

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -40,7 +40,7 @@
         </div>
     </div>
 
-    <button th:onclick="|window.location.href='@{/page2}'|" class="btn">
+    <button th:onclick="|window.location.href='@{/location}'|" class="btn">
         오점머 시작하기!
     </button>
 </div>
