--- a/src/main/resources/templates/location.html
+++ b/src/main/resources/templates/location.html
@@ -61,7 +61,7 @@
         </div>
     </div>
     <div id="map" style="width:100%;height:350px;"></div>
-    <button th:onclick="|window.location.href='@{/page3}'|" class="btn">
+    <button th:onclick="|window.location.href='@{/category}'|" class="btn">
         현위치를 중심으로 메뉴 선택하러 가기
     </button>
 </div>
