--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -138,7 +138,7 @@
     });
 
     $('#selectCategoryButton').on('click', function () {
-      window.location.href = '/page3'; // 카테고리 선택 페이지로 이동
+      window.location.href = '/category'; // 카테고리 선택 페이지로 이동
     });
   });
 
