--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -75,7 +75,7 @@
     </div>
     <br>
 
-    <button th:onclick="|window.location.href='@{/page4}'|" class="btn">
+    <button th:onclick="|window.location.href='@{/result}'|" class="btn">
         식당 추천 받으러 가기
     </button>
 
