--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -5,6 +5,9 @@
   <title>Title</title>
 </head>
 <body>
-로그인에 성공했습니다.
+<div>로그인에 성공했습니다.</div>
+<button th:onclick="|window.location.href='@{/allRestaurants}'|" class="btn">
+  button 음식점 전체 조회
+</button>
 </body>
 </html>
