--- a/src/main/resources/templates/location.html
+++ b/src/main/resources/templates/location.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta charset="utf-8">
     <link href="/css/styles.css" rel="stylesheet"> <!-- CSS 파일 참조 추가 -->
     <script src="/js/script.js"></script>
