Mixed content 문제 해결중(AJAX 호출 URL을 절대 경로로 지정)

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -154,7 +154,7 @@
   function recommend() {
     $.ajax({
       method: "POST",
-      url: "/v1/ojm/nearbyRestaurant",
+      url: "//lunch.picksay.com/v1/ojm/nearbyRestaurant",
       contentType: "application/json",
       data: JSON.stringify({
         currentLat: latitude,
