--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>오점머</title>
@@ -154,7 +153,7 @@
   function recommend() {
     $.ajax({
       method: "POST",
-      url: "//lunch.picksay.com/v1/ojm/nearbyRestaurant",
+      url: "/v1/ojm/nearbyRestaurant",
       contentType: "application/json",
       data: JSON.stringify({
         currentLat: latitude,
