--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>오점머</title>
-<!--  <link th:href="@{/css/bootstrap.min.css}" href="../css/bootstrap.min.css" rel="stylesheet">-->
-  <link th:href="@{/css/styles.css}" href="../css/styles.css" rel="stylesheet">
-  <script th:src="@{/js/script.js}" src="../js/script.js"></script>
+  <link href="/css/styles.css" rel="stylesheet"> <!-- CSS 파일 참조 추가 -->
+  <script src="/js/script.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <style>
     body {
