--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -2,9 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-<!--    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">-->
-    <script th:src="@{/js/script.js}"></script>
-    <link th:href="@{/css/styles.css}" rel="stylesheet"> <!-- CSS 파일 참조 추가 -->
+    <link href="/css/styles.css" rel="stylesheet"> <!-- CSS 파일 참조 추가 -->
+    <script src="/js/script.js"></script>
     <style>
         .form-check {
             font-size: 1.25rem;
