--- a/src/main/resources/templates/allRestaurants.html
+++ b/src/main/resources/templates/allRestaurants.html
@@ -8,6 +8,7 @@
     .container {
       text-align: center;
       margin-top: 20px;
+      position: relative;
     }
 
     .restaurant-item {
@@ -35,11 +36,20 @@
     .size-input {
       margin: 10px;
     }
+
+    .total-count {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 14px;
+      color: #555;
+    }
   </style>
 </head>
 <body>
-<div class="container">
+<div class="container" id="content" style="display: none;">
   <h1>음식점 전체 조회</h1>
+  <div class="total-count" id="totalCount">총 음식점 수: 0</div>
   <div class="size-input">
     <label for="sizeInput">페이지 당 음식점 수: </label>
     <input type="number" id="sizeInput" min="1" value="5">
@@ -54,6 +64,9 @@
     </div>
   </div>
 </div>
+
+<!-- 필요한 JavaScript 파일 -->
+<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 
 <script>
   let currentPage = 1;
@@ -88,6 +101,9 @@
       currentPage = data.data.currentPage;
       totalPages = data.data.totalPage;
       updatePaginationButtons();
+
+      const totalCount = document.getElementById('totalCount');
+      totalCount.textContent = `총 음식점 수: ${data.data.totalElements}`;
     })
     .catch(error => console.error('Error fetching data:', error));
   }
@@ -111,7 +127,25 @@
   }
 
   document.addEventListener('DOMContentLoaded', () => {
-    getRestaurants(currentPage, pageSize);
+    const host = window.location.origin;
+
+    // 세션을 확인하여 로그인 상태를 체크
+    $.ajax({
+      type: "GET",
+      url: `${host}/v1/admin/get-session`,
+      success: function (response) {
+        if (response.data === "OJM Auth") {
+          $('#content').show();
+          getRestaurants(currentPage, pageSize);
+        } else {
+          window.location.href = `${host}/login.html`;
+        }
+      },
+      error: function () {
+        // 세션이 없으면 로그인 페이지로 리다이렉트합니다.
+        window.location.href = `${host}/login.html`;
+      }
+    });
   });
 
   function updatePaginationButtons() {
